--- a/src/BeginnerTasks.csproj
+++ b/src/BeginnerTasks.csproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
+        <PackageReference Include="MySql.Data" Version="9.1.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
 </Project>
