--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -5,12 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "WeatherForCast": "mongodb://localhost:27017"
-  },
-  "MongoDbSettings": {
-    "DatabaseName": "WeatherData",
-    "CollectionName": "Data"
-  }
+  "AllowedHosts": "*"
 }
