--- a/src/BeginnerTasks.csproj
+++ b/src/BeginnerTasks.csproj
@@ -10,7 +10,8 @@
     <ItemGroup>
         <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
         <PackageReference Include="MySql.Data" Version="9.1.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
+        <PackageReference Include="System.Text.Json" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
